fix sonar smells